[package]
name = "allpay"
version = "0.1.0"
authors = ["damody <t1238142000@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
awc = "1.0.1"
env_logger = "0.7"
futures = "0.3.1"
bytes = "0.5.3"
isahc = "0.8"
serde_json = "1.0"
serde = "1.0"
crossbeam-channel = "0.4"
failure = "0.1"
failure_derive = "0.1"
